deploy/productsService/productsService-middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-products-service
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /srv/products
