deploy/productsService/productsService-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service

spec:
  ports:
    - name: web
      port: 8080
      targetPort: web

  selector:
    app: products-service
