deploy/productsService/productsService-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-service-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-products-service@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
             name: web
